- migration on JDK 13, Spring boot 2.2.5 : build sucess.